Archive2/92/ed6e97685ce784/output
main.cpp:7:50: error: 'value_type' is a private member of 'std::vector<int, std::allocator<int> >'
   template<class U> static yes test(typename U::value_type*);
                                                 ^
main.cpp:7:33: note: while substituting explicitly-specified template arguments into function template 'test' 
   template<class U> static yes test(typename U::value_type*);
                                ^
main.cpp:15:11: note: in instantiation of template class 'has_value_type<C>' requested here
   return has_value_type<C>::value;
          ^
main.cpp:7:50: error: 'value_type' is a private member of 'std::vector<int, std::allocator<int> >'
   template<class U> static yes test(typename U::value_type*);
                                                 ^
main.cpp:7:33: note: while substituting deduced template arguments into function template 'test' [with U = C]
   template<class U> static yes test(typename U::value_type*);
                                ^
main.cpp:15:11: note: in instantiation of template class 'has_value_type<C>' requested here
   return has_value_type<C>::value;
          ^
main.cpp:16:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
1 warning and 2 errors generated.
